chore: use okhttpclient in integration tests in favor of khttp (#682)
Use the OkHttpClient lib everywhere in our integration tests in favour
of the old no longer supported KHttp library.

Solves PZ-1644